--- a/index.html
+++ b/index.html
@@ -70,40 +70,68 @@
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour, or randomised...........</p>
                 </div>
-                    <div class="feature-box">
-                        <h1>Drag & Drop Builder</h1>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered
-                            alteration in some form, by injected humour, or randomised...........</p>
-                    </div>
-                    <div class="feature-box">
-                        <h1>Awesome Modern Design</h1>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered
-                            alteration in some form, by injected humour, or randomised...........</p>
-                    </div>
-                    <div class="feature-box">
-                        <h1>Super Easy to Edit</h1>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered
-                            alteration in some form, by injected humour, or randomised...........</p>
-                    </div>
+                <div class="feature-box">
+                    <h1>Drag & Drop Builder</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                        suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
                 </div>
+                <div class="feature-box">
+                    <h1>Awesome Modern Design</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                        suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-box">
+                    <h1>Super Easy to Edit</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                        suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
             <div class="feature-img">
                 <img src="./images/architect.png" alt="">
-                <button class="btn-special"><h1>10+year <span class="smol">Experience</span></h1></button>
+                <button class="btn-special">
+                    <h1>10+year <span class="smol">Experience</span></h1>
+                </button>
             </div>
         </section>
         <section class="facts">
-
+            <h1 class="section-title">Some Facts</h1>
+            <h3 class="section-desc">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration.</h3>
+            <div class="facts-container">
+                <div class="fact">
+                    <img src="./images/icons/ribon.png" alt="">
+                    <h1>54</h1>
+                    <h3>Awards Winnings</h3>
+                </div>
+                <div class="fact">
+                    <img src="./images/icons/projects.png" alt="">
+                    <h1>1458</h1>
+                    <h3>Projects Finished</h3>
+                </div>
+                <div class="fact">
+                    <img src="/images/icons/customers.png" alt="">
+                    <h1>590</h1>
+                    <h3>Clients Worked</h3>
+                </div>
+                <div class="fact">
+                    <img src="./images/icons/email.png" alt="">
+                    <h1>22579</h1>
+                    <h3>Email Send</h3>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
         <section class="sponsor">
-
+            <h1 class="section-title">Our Sponsors</h1>
+            <h3 class="section-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</h3>
+            <img src="./images/sponsors/spotify.png" alt=""><img src="./images/sponsors/amazon.png" alt=""><img src="./images/sponsors/google.png" alt=""><img src="./images/sponsors/telerama.png" alt=""><img src="./images/sponsors/figma.png" alt="">
         </section>
         <section class="copyright">
-
+            <div class="cpy"><h4>All rights reserved copyright@2023 startup landing page design by Arefin Amin</h4></div>
         </section>
     </footer>
 </body>
