--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <button class="btn-special">
                     <h1>10+year <span class="smol">Experience</span></h1>
                 </button>
+                <button class="btn-sp-2"><h1>10+year <span class="smol">Experience</span></h1></button>
             </div>
         </section>
         <section class="facts">
