--- a/index.html
+++ b/index.html
@@ -124,6 +124,34 @@
                 </div>
             </div>
         </section>
+        <section class="additional">
+            <div class="additional-content">
+                <h3 class="unique">Why we are unique?</h3>
+                <div class="content">
+                    <div class="tick">
+                        <img src="images/icons/tick.png" alt="" class="tick-img">
+                        <h4 class="tick-text">Fast work & on-time</h4>
+                        </img>
+                    </div>
+                    <div class="tick">
+                        <img src="images/icons/tick.png" alt="" class="tick-img">
+                        <h4 class="tick-text">Nice Finishing</h4>
+                        </img>
+                    </div>
+                    <div class="tick">
+                        <img src="images/icons/tick.png" alt="" class="tick-img">
+                        <h4 class="tick-text">Free servicing offer</h4>
+                        </img>
+                    </div>
+                    <div class="tick">
+                        <img src="images/icons/tick.png" alt="" class="tick-img">
+                        <h4 class="tick-text">23/7 Customer Service.</h4>
+                        </img>
+                    </div>
+                </div>
+                <img class="sad-img" src="images/sad.png" alt="">
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <section class="sponsor">
