--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-
+    <!-----------------------
+        Header and Nav bar 
+    ------------------------->
     <header class="header">
         <nav>
             <h2 class="nav-title">G-3 Architects</h2>
@@ -28,6 +30,9 @@
                 </ul>
             </div>
         </nav>
+        <!-----------------------
+                 Banner
+         ------------------------->
         <section class="banner">
             <h2 class="banner-title">Brand New</h2>
             <h2 class="banner-title">Group of Architects</h2>
@@ -44,6 +49,9 @@
         </section>
     </header>
     <main>
+        <!----------------------
+             Quick list section  
+        ------------------------->
         <section class="quick-list">
             <div class="list">
                 <h3><span class="ash">Quick List</span> Of Our <span class="orange">Features</span></h3>
@@ -57,8 +65,10 @@
                 <img src="./images/team3.png" alt="">
                 <img src="./images/team4.png" alt="">
             </div>
-
         </section>
+        <!-------------------------
+             love & enjoy section 
+        ---------------------------->
         <section class="love-enjoy">
             <div class="feature">
                 <div class="section-title">Features you will love & enjoy</div>
@@ -97,6 +107,9 @@
                 <button class="btn-sp-2"><h1>10+year <span class="smol">Experience</span></h1></button>
             </div>
         </section>
+        <!----------------- 
+            Facts Section 
+        -------------------->
         <section class="facts">
             <h1 class="section-title">Some Facts</h1>
             <h3 class="section-desc">There are many variations of passages of Lorem Ipsum available, but the majority
@@ -124,6 +137,9 @@
                 </div>
             </div>
         </section>
+        <!-----------------------------
+             Addition part told to add 
+        -------------------------------->
         <section class="additional">
             <div class="additional-content">
                 <h3 class="unique">Why we are unique?</h3>
@@ -149,11 +165,17 @@
         </section>
     </main>
     <footer class="footer">
+        <!----------------- 
+            Sponsor Part 
+        ------------------->
         <section class="sponsor">
             <h1 class="section-title">Our Sponsors</h1>
             <h3 class="section-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</h3>
             <img src="./images/sponsors/spotify.png" alt=""><img src="./images/sponsors/amazon.png" alt=""><img src="./images/sponsors/google.png" alt=""><img src="./images/sponsors/telerama.png" alt=""><img src="./images/sponsors/figma.png" alt="">
         </section>
+        <!--------------
+            Copyright 
+        ---------------->
         <section class="copyright">
             <div class="cpy"><h4>All rights reserved copyright@2023 startup landing page design by Arefin Amin</h4></div>
         </section>
